Create style and js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         GitHub працює!!!
     </h1>
 
+    <ul class="list">
+        <li class="item">HTML</li>
+        <li class="item">CSS</li>
+        <li class="item">JS</li>
+    </ul>
+
 
     <script src="script.js"></script>
 </body>
